Create basic authorization redirect functionality

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harmony</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>You don't make a name as a cyberpunk by how you live, you're remembered by how you die.</h1>
+    <p class="centered">Waiting for Discord authorization...</p>
 </body>
